Implemented WCF Service

--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,4 @@ __pycache__/
 *.pyc
 /NET.12-2-HEGEL-JOSEPH-N01325422.zip
 /NET.12-3-HEGEL-JOSEPH-N01325422.zip
+/NET.12-4-HEGEL-JOSEPH-N01325422.zip
