Fix: Unit test 5 added from inside the solution folder.

--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ __pycache__/
 /NET.12-2-HEGEL-JOSEPH-N01325422.zip
 /NET.12-3-HEGEL-JOSEPH-N01325422.zip
 /NET.12-4-HEGEL-JOSEPH-N01325422.zip
+*.zip
